# creatorpulse-india

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  LEGAL.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  scheduled-refresh.yml
analysis/: creator_lifecycle.py  topic_modeling.py
apps/api/: cache.py  chatbot.py  main.py
apps/frontend/: app.py
apps/frontend/components/: about.py  data.py
apps/frontend/pages/: brand.py  creator.py
apps/ingest/: normalizer.py  quota_tracker.py  refresh.py  static_ingest.py  youtube_client.py
apps/ml/: clustering.py  earnings.py  features.py  fraud_classifier.py  match.py  mlflow_utils.py  pricing.py  query_expand.py
apps/web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  template.tsx
apps/web/app/about/: page.tsx
apps/web/app/brands/: page.tsx
apps/web/app/creators/: page.tsx
apps/web/app/creators/[id]/: page.tsx
apps/web/app/niches/: page.tsx
apps/web/app/niches/[niche]/: page.tsx
apps/web/components/: AboutBuiltBy.tsx  AuroraBackground.tsx  BrandResultCard.tsx  ChatWidget.tsx  ChatWidgetLazy.tsx  CountUp.tsx  CreatorCard.tsx  CreatorDetailSkeleton.tsx  ForecastChart.tsx  InfoHint.tsx  NavBar.tsx  NicheSections.tsx  NicheSelect.tsx  PersonaSplit.tsx  ProjectionChart.tsx  PulseMark.tsx  Reveal.tsx  ScoreRadar.tsx  ScrollProgress.tsx  SkeletonGrid.tsx  StatStrip.tsx
apps/web/lib/: api.ts  format.ts  theme.ts
data/: common_words.txt  known_brands.csv  niche_taxonomy.csv  seed_handles.csv
data/schemas/: youtube_v3.json
docker/airflow/: Dockerfile
docs/: architecture.md  decisions.md  model_card.md  retro.md
docs/business/: BRD.md  CreatorPulse_Executive.pbix  CreatorPulse_Executive_Workbook.xlsx  FRD.md  competitive_analysis.md  gap_analysis.md  market_sizing.md  personas.md  pestle.md  process_maps.md  swot.md  user_stories.md  wireframes.md
evaluation/: check_regression.py  cohort.csv  export_cohort.py  faithfulness_cases.yaml  faithfulness_eval.py  faithfulness_results.jsonl  ground_truth_labels.csv
evaluation/baselines/: clustering.json  earnings.json  fraud_classifier.json
models/: cluster_assignments_v1.joblib  earnings_regressor_v1.joblib  fraud_classifier_v1.joblib
orchestration/airflow/dags/: dag_youtube_discovery.py  dag_youtube_tier_a.py  dag_youtube_tier_b.py
scripts/: build_seed_list.py  posthog_smoke.py  smoke_redis.py  snapshot_to_r2.py
tests/unit/: test_features.py  test_pricing.py
warehouse/sql/init/: 00_extensions.sql
